[package]
name = "trans"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unic-langid = { version = "0.9", features = ["macros"] }
fluent-langneg = "0.13.0"
fluent-bundle = "0.15.0"
